<resources>
    <string name="app_name">PaqtaFood</string>
    <string name="labelUser">Usuario</string>
    <string name="labelPassword">Contraseña</string>
    <string name="labelConfirmPassword">Confirmar Contraseña</string>
    <string name="labelEmail">Email</string>
    <string name="labelButtonLogin">Iniciar Sesion</string>
    <string name="labelButtonRegistro">Registrarse</string>
    <string name="labelTextViewLogin">LOGIN</string>
    <string name="labelMenuGestion">Menú de Gestion</string>
    <string name="labelTextViewSignup">REGISTRO</string>
    <string name="labelRememberPassword">¿Olvidaste tu contraseña?</string>
    <string name="labelRegistro">REGISTRARSE</string>
    <string name="labelLogin">INICIA SESION</string>
    <string name="descriptionImagesMenuPlat">Plato</string>

    <!--    Firebase-->
    <string name="web_client_id">1091847638331-pr3rnj676qargsnp1m1jdpfaf5sdud2o.apps.googleusercontent.com</string>

    <!--    Navigation Drawer-->
    <string name="open_nav">open</string>
    <string name="close_nav">close</string>

    <!--    Dishes-->
    <string name="labelTitleFishes">Directorio de Platos</string>
    <string name="btnNuevoFishes">NUEVO</string>
    <string name="labelFishes">Arroz Chaufa y papas fritas</string>
    <string name="labelSecundaryFishes">Principal</string>

    <!--    Staff-->
    <string name="labelTitleStaff">Directorio de personal</string>

    <!--    Profile-->
    <string name="labelCampoNulo">...</string>
    <string name="facebook">Facebook</string>
    <string name="google_maps_key">AIzaSyB7dE5n7bA6JRQrXzDdNKfKw0hQ97gLNKw</string>

    <string-array name="roles_array">
        <item>Administrador</item>
        <item>Usuario</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Facebook-->
    <!--    <string name="facebook_app_id_def">941048803879345</string>-->

    <!--    <string name="fb_login_protocol_scheme">fb941048803879345</string>-->

    <!--    <string name="facebook_client_token_def">768f3ed238db3333214186fca0b6c736</string>-->


</resources>