<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signup.Signup">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="356dp"
        android:layout_height="366dp"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/colorFondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvwLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/labelTextViewSignup"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutUser"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="4dp"
                android:hint="@string/labelUser"
                app:boxBackgroundColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvwLogin"
                app:startIconDrawable="@drawable/baseline_person_outline_24"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtRegisterUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnLogin"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/colorRojo"
                android:text="@string/labelButtonRegistro"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutEmail"
                app:layout_constraintVertical_bias="1.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutPassword"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="10dp"
                app:boxBackgroundColor="#fff"
                app:boxBackgroundMode="filled"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutEmail"
                app:startIconDrawable="@drawable/outline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelPassword"

                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutConfirmPassword"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="10dp"
                app:boxBackgroundColor="#fff"
                app:boxBackgroundMode="filled"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutPassword"
                app:layout_constraintVertical_bias="0.0"
                app:startIconDrawable="@drawable/outline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtRegisterConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_light_onSurfaceVariant"
                    android:hint="@string/labelConfirmPassword"

                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutEmail"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="8dp"
                android:hint="@string/labelEmail"

                app:boxBackgroundColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutUser"
                app:startIconDrawable="@drawable/baseline_person_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/decorator_top"
        android:layout_width="167dp"
        android:layout_height="116dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rayitas" />

    <ImageView
        android:id="@+id/decorator_bottom"
        android:layout_width="210dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/rayitas_volteadas" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="359dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/paqta_food_2" />

</androidx.constraintlayout.widget.ConstraintLayout>